--- a/launcher.json
+++ b/launcher.json
@@ -4,9 +4,9 @@
         "official_site": "https://www.klanta.space"
     },
     "klantaspace": {
-        "version_url": "https://github.com/mrairz/klanta/space/version",
-        "mods_url": "https://github.com/mrairz/klanta/space/mods",
-        "version_structure_url": "https://github.com/mrairz/klanta/space/version.json",
-        "mods_structure_url": "https://github.com/mrairz/klanta/space/mods.json"
+        "version_url": "https://www.dropbox.com/scl/fi/eqljdg1mhxom9n0t4lf1a/version.zip?rlkey=gt01oaomr5ckm5rh2v5gjmng4&st=8bpmw6b2&dl=1",
+        "mods_url": "https://www.dropbox.com/scl/fi/ga3cvf6gjzuano8v7px9r/mods.zip?rlkey=pc9shaidxzfs7zbmy9965vt8d&st=qhwl3ajz&dl=1",
+        "version_structure_url": "https://raw.githubusercontent.com/mrairz/klanta/main/space/version.json",
+        "mods_structure_url": "https://raw.githubusercontent.com/mrairz/klanta/main/space/mods.json"
     }
 }
