--- a/launcher.json
+++ b/launcher.json
@@ -6,7 +6,7 @@
     "klantaspace": {
         "version_url": "https://www.dropbox.com/scl/fi/0zc78jv5k0b0hkh8dukbj/version.zip?rlkey=como4ijchcdqoh1jbpx10llwg&st=w2101d5o&dl=1",
         "mods_url": "https://www.dropbox.com/scl/fi/ga3cvf6gjzuano8v7px9r/mods.zip?rlkey=pc9shaidxzfs7zbmy9965vt8d&st=qhwl3ajz&dl=1",
-        "version_structure_url": "https://raw.githubusercontent.com/mrairz/klanta/main/space/version.json",
-        "mods_structure_url": "https://raw.githubusercontent.com/mrairz/klanta/main/space/mods.json"
+        "space_version": "0.1",
+        "mods_version": "0.1"
     }
 }
