--- a/launcher.json
+++ b/launcher.json
@@ -4,8 +4,8 @@
         "official_site": "https://www.klanta.space"
     },
     "klantaspace": {
-        "version_url": "https://www.dropbox.com/scl/fi/0zc78jv5k0b0hkh8dukbj/version.zip?rlkey=como4ijchcdqoh1jbpx10llwg&st=w2101d5o&dl=1",
-        "mods_url": "https://www.dropbox.com/scl/fi/ga3cvf6gjzuano8v7px9r/mods.zip?rlkey=pc9shaidxzfs7zbmy9965vt8d&st=qhwl3ajz&dl=1",
+        "version_url": "https://www.dropbox.com/scl/fi/zl1kcsx1821b7otbqud7o/version.zip?rlkey=w9vhnrcaa3mqcocfxgzd3vaef&st=o2jfbx68&dl=1",
+        "mods_url": "https://www.dropbox.com/scl/fi/y2ci796dzcpjtz4pzm7gu/mods.zip?rlkey=mcw18q7x5i9a7ui8i73z1b98m&st=wy8cjk45&dl=1",
         "space_version": "0.1",
         "mods_version": "0.1"
     }
